--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body {
     text-decoration: none;
     color: #040728;
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.125rem;
 }
 
 .nav-links a:hover,  .nav-links a.active{
@@ -81,7 +81,7 @@ body {
 
 #search input::placeholder{
     font-family: "Montserrat";
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
     color: #7D7E86;
 }
@@ -97,7 +97,7 @@ body {
    
 .hamburger {
     display: none;
-    font-size: 24px;
+    font-size: 1.5rem;
     color: #000;
 }
 
@@ -111,7 +111,7 @@ body {
 }
 
 .school-name h1{
-    font-size: 125px;
+    font-size: 7.8125rem;
     font-weight: 400;
     font-family: "Pulang";
     background: linear-gradient(#4761EA, #6e08efab);
@@ -141,7 +141,7 @@ body {
     padding: 0px 230px;
     padding-bottom: 40px;
     color: #050F47;
-    font-size: 20px;
+    font-size: 1.25rem;
     line-height: 32px;
     font-weight: 500;
 }
@@ -151,7 +151,7 @@ body {
     color: #fff;
     text-transform: uppercase;
     font-weight: 500;
-    font-size: 24px;
+    font-size: 1.5rem;
     background-color: #0F6470;
     box-shadow: 4px 4px 4px rgba(24, 170, 190, 0.41);
     border-radius: 5px;
@@ -169,7 +169,7 @@ body {
 
 .features p {
     font-weight: 500;
-    font-size: 22px;
+    font-size: 1.375rem;
     color: #000;
     padding-left: 10px;
 }
@@ -219,7 +219,7 @@ body {
 
 .environment h2 {
     font-weight: 500;
-    font-size: 36px;
+    font-size: 2.25rem;
     color: #050B2D;
     padding-bottom: 25px;
 }
@@ -270,7 +270,7 @@ body {
 
 .events-images p {
     font-weight: 600;
-    font-size: 28px;
+    font-size: 1.75rem;
     line-height: 40px;
     color: #07287D;
     text-align: center;
@@ -288,7 +288,7 @@ body {
 
 .kids-awards h2 {
     font-weight: 500;
-    font-size: 36px;
+    font-size: 2.25rem;
     color: #050B2D;
 }
 
@@ -315,7 +315,7 @@ body {
 
 #kids-slide-1 p, #kids-slide-2 p, #kids-slide-3 p {
     font-weight: 500;
-    font-size: 18px;
+    font-size: 1.125rem;
     color: #050B2D;
     text-align: left;
     padding: 20px 0px 0px 5px;
@@ -355,7 +355,7 @@ body {
 
 /* School Name */
     .school-name h1{
-        font-size: 100px;
+        font-size: 6.25rem;
     }
 
     .school-name h4 {
@@ -366,11 +366,11 @@ body {
     .school-mission p {
         padding: 0px 80px;
         padding-bottom: 45px;
-        font-size: 18px;
+        font-size: 1.125rem;
     }
 
     .school-mission a {
-        font-size: 20px;
+        font-size: 1.25rem;
         padding: 22px 80px;
     }
 
@@ -516,22 +516,22 @@ body {
 
 /* School Name */
     .school-name h1{
-        font-size: 70px;
+        font-size: 4.375rem;
     }
 
     .school-name h4 {
-        font-size: 18px;
+        font-size: 1.125rem;
     }
 
 /* School Mission */
     .school-mission p {
         padding: 0px 70px;
         padding-bottom: 48px;
-        font-size: 16px;
+        font-size: 1rem;
     }
 
     .school-mission a {
-        font-size: 18px;
+        font-size: 1.125rem;
         padding: 22px 70px;
     }
 
@@ -546,7 +546,7 @@ body {
     }
 
     .environment h2 {
-        font-size: 30px;
+        font-size: 1.875rem;
     }
 
     .env-img {
@@ -604,12 +604,12 @@ body {
 
 /* School Name */
     .school-name h1{
-        font-size: 40px;
+        font-size: 2.5rem;
     }
 
     .school-name h4 {
         padding-right: 50px;
-        font-size: 16px;
+        font-size: 1rem;
         font-weight: 500;
     }
 
@@ -622,18 +622,18 @@ body {
     .school-mission p {
         padding: 0px;
         padding-bottom: 30px;
-        font-size: 14px;
+        font-size: .875rem;
         line-height: 25px;
     }
 
     .school-mission a {
-        font-size: 14px;
+        font-size: .875rem;
         padding: 15px 50px;
     }
 
 /* Features */
     .features p {
-        font-size: 16px;
+        font-size: 1rem;
     }
 
     .features img {
@@ -657,7 +657,7 @@ body {
     }
 
     .environment h2 {
-        font-size: 22px;
+        font-size: 1.375rem;
     }
 
     .env-img {
@@ -709,7 +709,7 @@ body {
     .school-name h4 {
         padding-right: 0px;
         align-self: center;
-        font-size: 14px;
+        font-size: .875rem;
     }
 
 /* School Mission */
@@ -724,6 +724,6 @@ body {
 
 /* Events */
     .events-images p {
-        font-size: 20px;
+        font-size: 1.25rem;
     }
 } 
